Собран и проверен, почти готов на ревью

--- a/index.html
+++ b/index.html
@@ -43,80 +43,75 @@
           </li>
         </ul>
       </nav>
-      <h1 class="header__logo">no focus</h1>
-      <p class="header__text">Что делать, когда не можешь делать ничего<br>
+      <h1 class="cover__description">no focus</h1>
+      <p class="cover__text">Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
-      <p class="decorated-zone-dark">REC</p>
+      <p class="decorated-zone-dark" aria-hidden="true">REC</p>
     </header>
     <main class="main">
-
-      <article class="text-block">
-        <h2 class="text-block__title">Почему сосредоточиться так сложно</h2>
-        <div class="text-block__content">
-          <h3 class="text-block__content__title">Многозадачность</h3>
-          <p class="text-block__content__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
+      <section class="section">
+        <h2 class="section__title">Почему сосредоточиться так сложно</h2>
+        <div class="section__content">
+          <h3 class="section__content__title">Многозадачность</h3>
+          <p class="section__content__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
             <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         </div>
-        <div class="text-block__content">
-          <h3 class="text-block__content__title">Дофамин</h3>
-          <p class="text-block__content__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+        <div class="section__content">
+          <h3 class="section__content__title">Дофамин</h3>
+          <p class="section__content__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
         </div>
-      </article>
-
-      <article class="text-block grid-non">
-        <h2 class="text-block__title">Что снижает концентрацию внимания?</h2>
-        <div class="text-block__content">
-          <h3 class="text-block__content__title">Многозадачность</h3>
-          <p class="text-block__content__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+      </section>
+      <section class="section middle-section">
+        <h2 class="section__title">Что снижает концентрацию внимания?</h2>
+        <div class="section__content">
+          <h3 class="section__content__title">Многозадачность</h3>
+          <p class="section__content__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
         </div>
-        <div class="text-block__content">
-          <h3 class="text-block__content__title">Еда</h3>
-          <p class="text-block__content__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
+        <div class="section__content">
+          <h3 class="section__content__title">Еда</h3>
+          <p class="section__content__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
         </div>
-        <div class="text-block__content">
-          <h3 class="text-block__content__title">Гаджеты</h3>
-          <p class="text-block__content__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+        <div class="section__content">
+          <h3 class="section__content__title">Гаджеты</h3>
+          <p class="section__content__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
         </div>
-      </article>
-
-      <article class="text-block">
-        <h2 class="text-block__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <h3 class="text-block__content__title">5 простых (на самом деле не очень) советов</h3>
-        <div class="text-block__content">
-          <h4 class="text-block__content__subtitle">Представьте небо и облака</h4>
-          <p class="text-block__content__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+      </section>
+      <section class="section">
+        <h2 class="section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <h3 class="section__content__title">5 простых (на самом деле не очень) советов</h3>
+        <div class="section__content">
+          <h4 class="section__content__subtitle">Представьте небо и облака</h4>
+          <p class="section__content__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
         </div>
-        <div class="text-block__content">
-          <h4 class="text-block__content__subtitle">Включите музыку</h4>
-          <p class="text-block__content__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
+        <div class="section__content">
+          <h4 class="section__content__subtitle">Включите музыку</h4>
+          <p class="section__content__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
         </div>
-        <div class="text-block__content">
-          <h4 class="text-block__content__subtitle">Прогуляйтесь</h4>
-          <p class="text-block__content__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+        <div class="section__content">
+          <h4 class="section__content__subtitle">Прогуляйтесь</h4>
+          <p class="section__content__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
         </div>
-        <div class="text-block__content">
-          <h4 class="text-block__content__subtitle">Хорошо ешьте</h4>
-          <p class="text-block__content__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+        <div class="section__content">
+          <h4 class="section__content__subtitle">Хорошо ешьте</h4>
+          <p class="section__content__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
         </div>
-        <div class="text-block__content">
-          <h4 class="text-block__content__subtitle">Читайте</h4>
-          <p class="text-block__content__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+        <div class="section__content">
+          <h4 class="section__content__subtitle">Читайте</h4>
+          <p class="section__content__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
         </div>
-      </article>
-
-      <article class="images-block">
-        <h3 class="text-block__content__title images-block__title">А можно в картинках?</h3>
-        <img class="image" src="/images/sunset.png" alt="">
-        <img class="image" src="/images/ice-cream.png" alt="">
-        <img class="image" src="/images/tape.png" alt="">
-        <img class="image" src="/images/books.png" alt="">
-        <img class="image" src="/images/street.png" alt="">
-      </article>
-
+      </section>
+      <section class="gallery">
+        <h3 class="section__content__title gallery__title">А можно в картинках?</h3>
+        <img class="gallery__item" src="/images/sunset.png" alt="векторный рисунок, с птицами на фоне гор и заката" loading="lazy">
+        <img class="gallery__item" src="/images/ice-cream.png" alt="векторный рисунок, шарики из мороженого с лицами и фруктами, в тарелке с лицом" loading="lazy">
+        <img class="gallery__item" src="/images/tape.png" alt="векторный рисунок, касета, вокруг которой разные элементы из мира цифровых технологий" loading="lazy">
+        <img class="gallery__item" src="/images/books.png" alt="векторный рисунок, стопка книг, сверху которой лежит чашка для чая" loading="lazy">
+        <img class="gallery__item" src="/images/street.png" alt="векторный рисунок, японская улица на фоне речки и деревьев" loading="lazy">
+      </section>
     </main>
     <footer class="footer decorated-zone">
-      <h1 class="header__logo">focus</h1>
+      <h5 class="cover__description">focus</h5>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
